tla2/crates/tla-core/src/snapshots/tla_core__diagnostic__tests__snapshot_undefined_name.snap
---
source: crates/tla-core/src/diagnostic.rs
expression: "render_to_string(&d, \"test.tla\", source)"
---
Error: undefined name: foo
   ╭─[test.tla:2:9]
   │
 2 │ Init == foo = 0
   │         ─┬─  
   │          ╰─── 'foo' is not defined
   │ 
   │ Help: Check the spelling, or add a definition for this name
───╯
